--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <p>test</p>
-    <a href="Sileo://source/https://sky1738.github.io/repo">Sileo</a>
-    <a href="zbra://sources/add/https://sky1738.github.io/repo/">Zebra</a>
+    <a href="Sileo://source/https://peep1738.github.io/repo">Sileo</a>
+    <a href="zbra://sources/add/https://peep1738.github.io/repo/">Zebra</a>
 </body>
 
 </html>
