--- a/repo/index.html
+++ b/repo/index.html
@@ -7,9 +7,16 @@
 </head>
 
 <body>
-    <p>test</p>
+    <h2>Sky1738's Repository</h2>
     <a href="Sileo://source/https://peep1738.github.io/repo">Sileo</a>
     <a href="zbra://sources/add/https://peep1738.github.io/repo/">Zebra</a>
+    <br>
+    <button type="button">
+        <img alt="https://peep1738.github.io/repo/webs/sileo.png">
+    </button>
+    <button type="button">
+        <img alt="https://peep1738.github.io/repo/webs/zebra.png">
+    </button>
 </body>
 
 </html>
