--- a/repo/index.html
+++ b/repo/index.html
@@ -7,16 +7,32 @@
 </head>
 
 <body>
-    <h2>Sky1738's Repository</h2>
-    <a href="Sileo://source/https://peep1738.github.io/repo">Sileo</a>
-    <a href="zbra://sources/add/https://peep1738.github.io/repo/">Zebra</a>
     <br>
-    <button type="button">
-        <img alt="https://peep1738.github.io/repo/webs/sileo.png">
-    </button>
-    <button type="button">
-        <img alt="https://peep1738.github.io/repo/webs/zebra.png">
-    </button>
+    <h2>Sky1738's Repository</h2>
+
+    <div class="repo's icons">
+        <p>add repo</p>
+        <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://peep1738.github.io/repo/">
+            <img width="25" height="25" src="https://peep1738.github.io/repo/webs/cydia.png"
+                data-src="https://peep1738.github.io/repo/webs/cydia.png" alt="Cydia" data-was-processed="true">
+        </a>
+        &ensp;&ensp;
+        <a href="Sileo://source/https://peep1738.github.io/repo">
+            <img width="25" height="25" src="https://peep1738.github.io/repo/webs/sileo.png"
+                data-src="https://peep1738.github.io/repo/webs/sileo.png" alt="Sileo" data-was-processed="true">
+        </a>
+        &ensp;&ensp;
+        <a href="zbra://sources/add/https://peep1738.github.io/repo/">
+            <img width="25" height="25" src="https://peep1738.github.io/repo/webs/zebra.png"
+                data-src="https://peep1738.github.io/repo/webs/zebra.png" alt="Zebra" data-was-processed="true">
+        </a>
+    </div>
+
+    <footer>
+        <div class="footer">
+            <h5 class="text text-center">© Sky1738 2024</h5>
+        </div>
+    </footer>
 </body>
 
 </html>
