--- a/repo/index.html
+++ b/repo/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sky1738's Repository</title>
+    <link rel="stylesheet" href="https://peep1738.github.io/repo/webs/style.css">
 </head>
 
 <body>
