--- a/repo/index.html
+++ b/repo/index.html
@@ -29,6 +29,16 @@
         </a>
     </div>
 
+    <br>
+
+    <div class="mytweaks">
+        <h3>My Tweaks</h3>
+
+        <li><a href="https://github.com/Peep1738/Disable-YTVideoZoom">DisableYTVideoZoom</a> (source available)</li>
+        <li><a href="https://github.com/Peep1738/DisableYTLongPress2x">DisableYTLongPress2x</a> (source available)</li>
+
+    </div>
+
     <footer>
         <div class="footer">
             <h5 class="text-center">© Sky1738 2024</h5>
