--- a/repo/index.html
+++ b/repo/index.html
@@ -18,7 +18,7 @@
                 data-src="https://peep1738.github.io/repo/webs/cydia.png" alt="Cydia" data-was-processed="true">
         </a>
         &ensp;&ensp;
-        <a href="Sileo://source/https://peep1738.github.io/repo">
+        <a href="Sileo://source/https://peep1738.github.io/repo/">
             <img width="25" height="25" src="https://peep1738.github.io/repo/webs/sileo.png"
                 data-src="https://peep1738.github.io/repo/webs/sileo.png" alt="Sileo" data-was-processed="true">
         </a>
