--- a/repo/index.html
+++ b/repo/index.html
@@ -41,7 +41,7 @@
 
     <footer>
         <div class="footer">
-            <h5 class="text-center">© Sky1738 2024</h5>
+            <h5>© Sky1738 2024</h5>
         </div>
     </footer>
 </body>
