--- a/repo/index.html
+++ b/repo/index.html
@@ -5,34 +5,36 @@
     <meta charset="utf-8">
     <title>Sky1738's Repository</title>
     <link rel="stylesheet" href="https://peep1738.github.io/repo/webs/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <br>
-    <h2>Sky1738's Repository</h2>
+    <h1>Sky1738's Repository</h1>
 
     <div class="repo's icons">
-        <p>add repo</p>
-        <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://peep1738.github.io/repo/">
-            <img width="25" height="25" src="https://peep1738.github.io/repo/webs/cydia.png"
-                data-src="https://peep1738.github.io/repo/webs/cydia.png" alt="Cydia" data-was-processed="true">
-        </a>
-        &ensp;&ensp;
-        <a href="Sileo://source/https://peep1738.github.io/repo/">
-            <img width="25" height="25" src="https://peep1738.github.io/repo/webs/sileo.png"
-                data-src="https://peep1738.github.io/repo/webs/sileo.png" alt="Sileo" data-was-processed="true">
-        </a>
-        &ensp;&ensp;
-        <a href="zbra://sources/add/https://peep1738.github.io/repo/">
-            <img width="25" height="25" src="https://peep1738.github.io/repo/webs/zebra.png"
-                data-src="https://peep1738.github.io/repo/webs/zebra.png" alt="Zebra" data-was-processed="true">
-        </a>
+        <p style="font-size: 15px;">add repo ->&ensp;&ensp;
+            <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://peep1738.github.io/repo/">
+                <img width="25" height="25" src="https://peep1738.github.io/repo/webs/cydia.png"
+                    data-src="https://peep1738.github.io/repo/webs/cydia.png" alt="Cydia" data-was-processed="true">
+            </a>
+            &ensp;&ensp;
+            <a href="Sileo://source/https://peep1738.github.io/repo/">
+                <img width="25" height="25" src="https://peep1738.github.io/repo/webs/sileo.png"
+                    data-src="https://peep1738.github.io/repo/webs/sileo.png" alt="Sileo" data-was-processed="true">
+            </a>
+            &ensp;&ensp;
+            <a href="zbra://sources/add/https://peep1738.github.io/repo/">
+                <img width="25" height="25" src="https://peep1738.github.io/repo/webs/zebra.png"
+                    data-src="https://peep1738.github.io/repo/webs/zebra.png" alt="Zebra" data-was-processed="true">
+            </a>
+        </p>
     </div>
 
     <br>
 
     <div class="mytweaks">
-        <h3>My Tweaks</h3>
+        <h2>My Tweaks</h2>
 
         <li><a href="https://github.com/Peep1738/Disable-YTVideoZoom">DisableYTVideoZoom</a> (source available)</li>
         <li><a href="https://github.com/Peep1738/DisableYTLongPress2x">DisableYTLongPress2x</a> (source available)</li>
